// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptListItem rendering tests PromptListItem - categories 1 - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative cursor-pointer rounded-lg border transition-all duration-200 border-blue-200 bg-blue-50/60 shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="absolute top-0 bottom-0 left-0 w-1 rounded-l-lg bg-gradient-to-b from-blue-500 to-blue-600"
      />
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="mb-2 flex items-center gap-2"
          >
            <h3
              class="flex-1 truncate text-sm font-semibold text-slate-900 transition-colors group-hover:text-blue-700"
            >
              title 1
            </h3>
            <div
              data-testid="is-favorite"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star h-4 w-4 transition-all scale-110 fill-yellow-400 text-yellow-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </div>
          </div>
          <div
            class="mb-2.5 flex flex-wrap gap-1.5"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200/50 bg-gradient-to-r from-slate-100 to-slate-50 px-2 py-0.5 text-xs font-medium text-slate-700"
            >
              category 0
            </span>
          </div>
          <div
            class="flex items-center justify-end gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock h-3.5 w-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                Sa., 27. Sept. 2025
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - categories 2 - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative cursor-pointer rounded-lg border transition-all duration-200 border-blue-200 bg-blue-50/60 shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="absolute top-0 bottom-0 left-0 w-1 rounded-l-lg bg-gradient-to-b from-blue-500 to-blue-600"
      />
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="mb-2 flex items-center gap-2"
          >
            <h3
              class="flex-1 truncate text-sm font-semibold text-slate-900 transition-colors group-hover:text-blue-700"
            >
              title 1
            </h3>
            <div
              data-testid="is-favorite"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star h-4 w-4 transition-all scale-110 fill-yellow-400 text-yellow-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </div>
          </div>
          <div
            class="mb-2.5 flex flex-wrap gap-1.5"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200/50 bg-gradient-to-r from-slate-100 to-slate-50 px-2 py-0.5 text-xs font-medium text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200/50 bg-gradient-to-r from-slate-100 to-slate-50 px-2 py-0.5 text-xs font-medium text-slate-700"
            >
              category 1
            </span>
            <span
              class="px-2 py-0.5 text-xs font-medium text-slate-500"
            >
              +
              1
               mehr
            </span>
          </div>
          <div
            class="flex items-center justify-end gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock h-3.5 w-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                Sa., 27. Sept. 2025
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - isSelected false - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative cursor-pointer rounded-lg border transition-all duration-200 border-slate-200/60 bg-white hover:border-slate-300 hover:shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="mb-2 flex items-center gap-2"
          >
            <h3
              class="flex-1 truncate text-sm font-semibold text-slate-900 transition-colors group-hover:text-blue-700"
            >
              title 1
            </h3>
            <div
              data-testid="is-favorite"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star h-4 w-4 transition-all text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </div>
          </div>
          <div
            class="flex items-center justify-end gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock h-3.5 w-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                Sa., 27. Sept. 2025
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - isSelected true - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative cursor-pointer rounded-lg border transition-all duration-200 border-blue-200 bg-blue-50/60 shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="absolute top-0 bottom-0 left-0 w-1 rounded-l-lg bg-gradient-to-b from-blue-500 to-blue-600"
      />
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="min-w-0 flex-1"
        >
          <div
            class="mb-2 flex items-center gap-2"
          >
            <h3
              class="flex-1 truncate text-sm font-semibold text-slate-900 transition-colors group-hover:text-blue-700"
            >
              title 1
            </h3>
            <div
              data-testid="is-favorite"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star h-4 w-4 transition-all scale-110 fill-yellow-400 text-yellow-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </div>
          </div>
          <div
            class="mb-2.5 flex flex-wrap gap-1.5"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200/50 bg-gradient-to-r from-slate-100 to-slate-50 px-2 py-0.5 text-xs font-medium text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200/50 bg-gradient-to-r from-slate-100 to-slate-50 px-2 py-0.5 text-xs font-medium text-slate-700"
            >
              category 1
            </span>
            <span
              class="px-2 py-0.5 text-xs font-medium text-slate-500"
            >
              +
              1
               mehr
            </span>
          </div>
          <div
            class="flex items-center justify-end gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock h-3.5 w-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                Sa., 27. Sept. 2025
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
